Orpie ChangeLog
------------------------------------------------------------------------

v1.4

   2004-08-23        Deprecated "extended_" operation identifiers in
                     favor of somewhat more clear "abbrev_" 
                     identifiers.

                     Added methods to include (i.e. source) rcfiles
                     within each other, remove key bindings, and remove
                     operation abbreviations.

   2004-07-19        Implemented automatic key bindings.

                     Deprecated operation "function_rand" in favor of
                     "command_rand" because it does not take an 
                     argument.


v1.3

   2004-07-22        Ocaml 3.08 support: an include string is provided
                     to the compiler when building curses bindings.

                     Added a fix for a possible crash when drawing
                     help panel and using a custom minimalist
                     orpierc.

   2004-07-18        User variables are now evaluated before being
                     passed as arguments to var().

   2004-07-17        Version 1.3.0 release.

                     Added permutation function and random number
                     generator.

                     Implemented common single-variable statistics
                     functions, and an upper tail normal probability
                     function.

   2004-07-16        Included "register" variable shortcut macros in
                     orpierc.
                     
                     Added a configuration option to conserve memory
                     by turning off string caching.

                     Added a background thread that precomputes
                     string representations of stack elements.

   2004-07-13        Implemented memoization of string representations
                     for stack elements.

   2004-07-08        Replaced general integer base conversion algorithm 